--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,15 @@
 <header class="site-header">
-  <h3 class="site-title">
+  <img src="/assets/img/D.png" alt="logo" />
+  <!--h3 class="site-title">
     <a href="{{ site.github.url }}/">{{ site.data.settings.title }}</a>
-  </h3>
+    <
+  </h3-->
+
   <nav class="menu-list">
     {% for item in site.data.settings.menu %}
       <a href="{{ site.github.url }}/pages/{{ item.file }}" class="menu-link">{{ item.name }}</a>
     {% endfor %}
-
+  
     {% for item in site.data.settings.social %}
       <a href="{{ item.link }}" class="menu-link" target="_blank"><i class="fa fa-{{ item.icon }}" aria-hidden="true"></i></a>
     {% endfor %}
