--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,17 @@
 
 {% include head.html %}
 
-<body>
+	<body>
 
-<div class="container">
-  {% include header.html %}
-  <div class="posts-wrapper">
-    {{ content }}
-  </div>
-  {% include footer.html %}
-</div>
-	{% include google-analytics.html %}
-</body>
+		<div class="container">
+		  {% include header.html %}
+		  <div class="posts-wrapper">
+		    {{ content }}
+		  </div>
+		  {% include footer.html %}
+		</div>
+			{% if jekyll.environment == 'production' %}
+			{% include google-analytics.html %}
+			{% endif %}
+	</body>
 </html>
